# EatSomethingSourWhenYoureTired

./: .gitignore  README.md  package-lock.json  tourneys
.claude/: settings.local.json
client/: env.example  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js  App.tsx  config.js  config.js.template  index.css  index.js
client/src/components/: AchievementsSection.tsx  AddressDisplay.tsx  Layout.tsx  (+8 more)
server/: Cargo.toml  Rocket.toml  env.example  package-lock.json  package.json
server/scripts/: addTwoPlayersAndSetRound1Start.js  extractWrcPenalties.js  generateUsers.js  migrateClubAffiliation.js  migrateGameRanks.js  migratePrivateMode.js  migrateRiichiMusic.js  migrateRoundDurationMinutes.js  migrateStartingPointValue.js  migrateTournamentCreatedBy.js  migrateUsernameToDisplayName.js  recalculateUMA.js  seedAchievements.js  seedDatabase.js  seedGuestPlayers.js  seedTileCollection.js  testDecisionQuizGeneration.js
server/src/: main.rs  server.js
server/src/middleware/: auth.js  errorHandler.js  validation.js
server/src/models/: Achievement.js  DecisionQuiz.js  DecisionQuiz.test.js  DiscardQuiz.js  Game.js  RankedLeague.js  Tile.js  Tournament.js  User.js  Yaku.js
server/src/routes/: achievements.js  auth.js  decisionQuizzes.js  discardQuizzes.js  games.js  rankedLeagues.js  tiles.js  tournaments.js  users.js
server/src/utils/: achievementService.js  decisionQuizService.js  emailService.js  gameService.js  rankedLeagueService.js  rankedLeagueService.test.js  roundGenerationService.js  tournamentUma.js
(+52 files in other folders)
