[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
actix-rt = "2.8.0"
config = "0.14.0"
env_logger = "*"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
image = "0.25.2"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.13.1", features = ["rt", "macros", "sync", "time"] }
serde_json = "1.0.93"
mongodb = "2.8"
chrono = "0.4.38"
lettre = "0.11.7"
lettre_email = "0.9"
uuid = "1.8.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
